@@ -1,3 +1,8 @@
+1999-10-26  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
+
+	* profile.cc (save, restore): Add const to each CHAR in
+	reinterpret_cast.
+
 1999-07-26  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>
 
 	* profile.cc (save): Use xmlNewDocNode.
